# dbt_dagster_nyc_crashes

./: .gitignore  README.md  explore_data.py  pyproject.toml
nyc_crashes_dagster_dbt/: definitions.py  resources.py
nyc_crashes_dagster_dbt/assets/: __init__.py  checks.py  crashes.py  dbt_assets.py  persons.py  vehicles.py  weather.py
nyc_crashes_dagster_dbt/dbt/: .user.yml  dbt_project.yml  profiles.yml
nyc_crashes_dagster_dbt/dbt/macros/: replace_street_suffix.sql  test_is_between.sql  test_is_valid_zip.sql
nyc_crashes_dagster_dbt/dbt/models/: sources.yml
nyc_crashes_dagster_dbt/dbt/models/audit/: stg_crashes_audit.sql  stg_crashes_street_audit.sql  stg_persons_audit.sql
nyc_crashes_dagster_dbt/dbt/models/clean/: _clean.yml  stg_crashes_clean.sql  stg_persons_clean.sql  stg_vehicles_clean.sql
nyc_crashes_dagster_dbt/dbt/models/core/: _core.yml  crashed_vehicle.sql  crashes.sql  persons.sql  vehicle_damages.sql  zip_code.sql
nyc_crashes_dagster_dbt/dbt/models/marts/: _marts.yml  dim_age.sql  dim_age_band.sql  dim_date.sql  dim_hour.sql  dim_vehicle.sql  dim_zip_code.sql  fct_crashes.sql  fct_persons.sql  fct_vehicles.sql
nyc_crashes_dagster_dbt/dbt/models/quarantine/: _quarantine.yml  stg_crashes_dirty.sql  stg_persons_dirty.sql  stg_vehicles_dirty.sql
nyc_crashes_dagster_dbt/dbt/models/staging/: _staging.yml  stg_crashes.sql  stg_persons.sql  stg_vehicles.sql
nyc_crashes_dagster_dbt/dbt/seeds/: invalid_state_registrations.csv  street_type_abbreviations.csv
nyc_crashes_dagster_dbt_tests/: test_assets.py
